--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
 html {
   box-sizing: border-box;
 }
@@ -9,16 +11,24 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
-  background:rgba(128,128,128,0.7) url("./img/boom.png") repeat fixed center;
+  font-family: "Roboto", sans-serif;
+  background-color: #e2e1e0;
 }
 
-
 #field {
-	border: 1px solid black;
+	background: #fff;
+  	border: 1px solid black;
 	display: inline-block;
 	padding: 0px;
 	margin-bottom: 0px;
+	border-radius: 2px;
+  	margin: 1rem;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#field:hover {
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #main {
@@ -40,14 +50,19 @@ body {
 .info-window {
 	height: 60px;
 	width: 60px;
-	margin-top: 10px;  /* molt cutre*/
-	border: 1px solid black;
-	border-bottom: 0px;
+	margin-top: 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	font-size: 31px;
-	background-color: rgba(128,128,128,0.7);
+	background: #fff;padding: 0px;
+	border-radius: 2px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.info-window:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #bombs-counter {
@@ -55,10 +70,18 @@ body {
 }
 
 #happy-face {
-  height: 60px;
-  width: auto;
-  margin-top: 10px;
-  background-color: rgba(128,128,128,0.7)
+  	height: 60px;
+  	width: auto;
+  	margin-top: 10px;
+	background: #fff;
+	padding: 0px;
+	border-radius: 2px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#happy-face:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 input {
@@ -73,10 +96,12 @@ input {
 	height: 40px;
 	background-color: grey;
 	border: 0.5px solid black;
+
 }
 
 .col:hover {
-	background-color:rgb(201, 208, 219);	
+	background-color:rgb(201, 208, 219);
+	cursor: pointer;	
 }
 
 .row {
@@ -92,7 +117,6 @@ input {
 	height: 40px;
 	display: inline-block;
 	border: 0.5px solid black;
-	cursor: pointer;
 }
 
 /* .bomb-reveal {
@@ -101,7 +125,7 @@ input {
 
 .bomb:hover {
 	cursor: pointer;
-	background-color: #fff;
+	/*background-color: #fff;*/
 }
 
 .bombs-near {
@@ -140,13 +164,171 @@ input {
 	align-items: center;
 }
 
-/*.blank {
-	background-color: #fff;
-}*/
-
 .flag-img {
 	width: 30px;
 	height: 30px;
+}
+
+table, tbody {
+	width: 100%;
+}
+
+tr {
+	justify-content: space-between;
+}
+
+#welcome {
+	background: #fff;
+  	border-radius: 2px;
+  	margin: 1rem;
+	width: 600px;
+	height: 300px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#welcome:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.group 			  { 
+  position:relative; 
+  margin-bottom:45px; 
+}
+input 				{
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+input:focus 		{ outline:none; }
+
+/* LABEL ======================================= */
+label 				 {
+  color:#999; 
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:#5264AE;
+}
+
+/* BOTTOM BARS ================================= */
+.bar 	{ position:relative; display:block; width:300px; }
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px; 
+  width:0;
+  bottom:1px; 
+  position:absolute;
+  background:#5264AE; 
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%; 
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%; 
+  width:100px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:#5264AE; }
+  to 	{ width:0; background:transparent; }
+}
+
+h1 {
+	margin-bottom: 50px;
+}
+
+.md-btn {
+  font-size: 14px;
+  display: inline-block;
+  height: 36px;
+  min-width: 88px;
+  padding: 6px 16px;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border:0;
+  border-radius: 2px;
+  background: #2196f3;
+  color:#fff;
+  outline:0;
+  &:focus {
+    background: darken(#2196f3, 12%)  
+  }
+}
+
+.md-btn-raised {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+              0 1px 5px 0 rgba(0, 0, 0, 0.12), 
+              0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  
+  &:active {
+      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                  0 3px 14px 2px rgba(0, 0, 0, 0.12),
+                  0 5px 5px -3px rgba(0, 0, 0, 0.4);
+  }
 }
 
 
