--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,8 @@ tr {
 	width: 600px;
 	height: 300px;
 	display: flex;
-	flex-direction: column;
+  flex-direction: column;
+  margin-top: 130px;
 	align-items: center;
 	justify-content: center;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -318,9 +319,6 @@ h1 {
   background: #e06331;
   color:#fff;
   outline:0;
-  &:focus {
-    background: darken(#2196f3, 12%)  
-  }
 }
 
 .md-btn-raised {
@@ -328,13 +326,13 @@ h1 {
               0 1px 5px 0 rgba(0, 0, 0, 0.12), 
               0 3px 1px -2px rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-  
-  &:active {
+}
+  .md-btn-raised:active {
       box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                   0 3px 14px 2px rgba(0, 0, 0, 0.12),
                   0 5px 5px -3px rgba(0, 0, 0, 0.4);
   }
-}
+
 
 #font-page-title {
   display: flex;
