--- a/styles.css
+++ b/styles.css
@@ -347,7 +347,7 @@ h1 {
 }
 
 #img-container {
-  height: 100px
+  height: 100px;
   width: auto;
   padding: 0px;
 }
@@ -359,6 +359,15 @@ h1 {
   height: auto;
 }
 
+.restart-btn {
+  width: 50px;
+  height: 50px;
+  color: red;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 /* #splash-title {
   margin-bottom: 200px;
 } */
